# api-spec.yaml
@@ -11,12 +11,7 @@ servers:
 paths:
   '/tickets/{ticketId}':
     parameters:
-      - schema:
-          type: string
-        name: ticketId
-        in: path
-        required: true
-        description: Unique ticket identifier
+      - $ref: '#/components/parameters/ticketId'
     get:
       summary: Get Ticket Info by Ticket ID
       tags: []
@@ -34,7 +29,7 @@ paths:
       operationId: get-ticket-ticketId
       description: Retrieve the information of the ticket with the matching ticket ID.
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
     patch:
       summary: Update Ticket Information
       operationId: patch-users-userId
@@ -43,7 +38,10 @@ paths:
           description: User Updated
           content:
             application/json:
-              schema: {}
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/BaseTicket'
+                  - $ref: '#/components/schemas/AdditionalTicketProperties'
               examples: {}
             application/xml:
               schema:
@@ -74,20 +72,10 @@ paths:
                 assignee:
                   type: string
                   format: uuid
-            examples:
-              Update First Name:
-                value:
-                  firstName: Rebecca
-              Update Email:
-                value:
-                  email: rebecca@gmail.com
-              Update Last Name & Date of Birth:
-                value:
-                  lastName: Baker
-                  dateOfBirth: '1985-10-02'
+            examples: {}
         description: Patch user properties to update.
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
     delete:
       summary: Delete Ticket by ID
       operationId: delete-tickets-ticketId
@@ -96,7 +84,7 @@ paths:
           description: Accepted
       description: Delete an existing ticket with matching ticketId.
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
   /users:
     post:
       summary: Create New User
@@ -124,7 +112,7 @@ paths:
         description: API to POST the necessary fields to create a new user.
       description: Create a new user.
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
     parameters: []
     get:
       summary: List all Users/Agents
@@ -163,12 +151,13 @@ paths:
                 allOf:
                   - $ref: '#/components/schemas/BaseCustomer'
                   - $ref: '#/components/schemas/AdditionalCustomerProperties'
+                  - $ref: '#/components/schemas/UserRequiredProperties'
         '404':
           description: Not Found
       operationId: get-customer-customerId
       description: Retrieve the information of the cusstomer with the matching ticket ID.
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
   /customers:
     post:
       summary: Create new Customer
@@ -185,7 +174,7 @@ paths:
                 - $ref: '#/components/schemas/BaseCustomer'
                 - $ref: '#/components/schemas/CustomerRequireProperties'
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
     parameters: []
     get:
       summary: List all Customers
@@ -205,7 +194,7 @@ paths:
           description: Not Found
       description: List all customersList all customers
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
   /tickets:
     get:
       summary: List all tickets
@@ -225,7 +214,7 @@ paths:
           description: Not Found
       operationId: get-tickets
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
       description: Get list of all ticket acording to filter criteria.
       requestBody:
         content:
@@ -242,7 +231,7 @@ paths:
           description: Conflict
       description: API to POST the necessary fields to create a new ticket.
       parameters:
-        - $ref: '#/components/parameters/X-TENNANT-ID'
+        - $ref: '#/components/parameters/X-TENANT-ID'
       requestBody:
         content:
           application/json:
@@ -250,6 +239,28 @@ paths:
               allOf:
                 - $ref: '#/components/schemas/BaseTicket'
                 - $ref: '#/components/schemas/TicketRequiredProperties'
+        description: ''
+  '/user/{userId}':
+    parameters:
+      - schema:
+          type: string
+        name: userId
+        in: path
+        required: true
+    get:
+      summary: Get User by ID
+      tags: []
+      responses: {}
+      operationId: get-user-userId
+      description: Retrieve the information of the user with the matching user ID.
+      parameters:
+        - $ref: '#/components/parameters/X-TENANT-ID'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              allOf:
+                - $ref: '#/components/schemas/UserRequiredProperties'
 components:
   schemas:
     BaseTicket:
@@ -363,11 +374,19 @@ components:
       required:
         - id
   parameters:
-    X-TENNANT-ID:
-      name: X-TENNANT-ID
+    X-TENANT-ID:
+      name: X-TENANT-ID
       in: header
       required: true
       schema:
         type: string
         format: uuid
       description: Organization Identifier
+    ticketId:
+      name: ticketId
+      in: path
+      required: true
+      schema:
+        type: string
+        format: uuid
+      description: Unique ticket identifier
